discussion/kv_engine/131794/131794_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Include <stdexcept> where necessary.

Fixes the following compilation issues when GCC10 is used.

In file included from .../repo-master/kv_engine/cbsasl/client.cc:19:
.../repo-master/kv_engine/cbsasl/plain/plain.h: In member function ‘virtual std::pair<cb::sasl::Error, std::basic_string_view<char> > cb::sasl::mechanism::plain::ServerBackend::step(std::string_view)’:
.../repo-master/kv_engine/cbsasl/plain/plain.h:34:20: error: ‘logic_error’ is not a member of ‘std’
   34 |         throw std::logic_error(
      |                    ^~~~~~~~~~~

.../repo-master/kv_engine/daemon/datatype_filter.cc: In member function ‘void DatatypeFilter::enable(cb::mcbp::Feature)’:
.../repo-master/kv_engine/daemon/datatype_filter.cc:51:20: error: ‘invalid_argument’ is not a member of ‘std’
   51 |         throw std::invalid_argument("Datatype::enable invalid feature:" +
      |                    ^~~~~~~~~~~~~~~~

In file included from .../repo-master/kv_engine/engines/ep/src/ep_types.cc:18:
.../repo-master/kv_engine/engines/ep/src/ep_types.h: In member function ‘void snapshot_range_t::checkInvariant() const’:
.../repo-master/kv_engine/engines/ep/src/ep_types.h:106:24: error: ‘runtime_error’ is not a member of ‘std’
  106 |             throw std::runtime_error(

Change-Id: I330eba94408b40cb62ce7c83ede682d9b66183a5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Aliaksey Artamonau
Date: 2020-07-02 05:43:24.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Aliaksey Artamonau
Date: 2020-07-02 05:44:03.000000000
Message: 
Patch Set 1: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-02 06:16:49.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3607/ : FAILURE

Failure of a CTest test [2020-07-02T05:56:55.788Z]  51/407 Test #311: memcached_testapp.default.TransportProtocols/BucketTest .....................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3607/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4669/ : FAILURE

Failure of a CTest test [2020-07-02T05:54:22.251Z]   8/388 Test #373: memcached_testapp.ep.Transport/McdTestappTest ............................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4669/ )

ThreadSanitizer issue: data race ../kv_engine/engines/ep/src/dcp/passive_stream.cc:238 in PassiveStream::reconnectStream(std::shared_ptr<VBucket>&, unsigned int, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4669/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1645/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24962/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28951/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3138/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4502/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4571/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12395/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-07-02 06:34:01.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-07-02 06:35:10.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-07-02 06:35:31.000000000
Message: 
Patch Set 1: Verified+1

Override failed CV - not related to this change
----------------------------------------------------------------------------------------------------------------------
